--- a/client/sequenciador.html
+++ b/client/sequenciador.html
@@ -3,23 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sequenciador Móvel</title>
+  <title>Sequenciador</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Sequenciador Móvel</h1>
+  <h1>Sequenciador</h1>
   <h2 id="sequenciadorAtual">Sequenciador atual: ...</h2>
 
   <div id="mensagens"></div>
 
-  <input type="text" id="inputMensagem" placeholder="Digite uma mensagem..." />
-  <button onclick="enviarMensagem()">Enviar</button>
-  <button onclick="virarSequenciador()">Tornar-se Sequenciador</button>
+  <button id="trocarSequenciador">🔁 Trocar Sequenciador</button>
 
   <h3>Console</h3>
   <pre id="consoleLog"></pre>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="./script.js"></script>
+  <script src="script-sequenciador.js"></script>
 </body>
 </html>
