--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="unificado">
     <header>
-      <h1>Sistema Distribuído - Simulação com 3 Sequenciadores</h1>
+      <h1>Sistema Distribuído - Sequenciador Móvel</h1>
     </header>
 
     <main class="painel">
